--- a/package.json
+++ b/package.json
@@ -2,7 +2,25 @@
   "name": "repo",
   "version": "1.0.0",
   "scripts": {
-    "build-lib": "ng build core && ng build gapi && ng build material-helpers && ng build material-cms-view && ng build material-cms-admin",
+    "build-lib": "run-s clean-lib build-core build-gapi build-mh build-material-cms-view build-material-cms-admin",
+    "clean-lib": "rmdir /s/q dist",
+    "build-core": "ng build core",
+    "build-gapi": "ng build gapi",
+    "build-mh": "run-p build-mh-*",
+    "build-mh-general-error": "ng build mh-general-error",
+    "build-mh-google-sign-in": "ng build mh-google-sign-in",
+    "build-mh-input-date": "ng build mh-input-date",
+    "build-mh-input-email": "ng build mh-input-email",
+    "build-mh-input-integer": "ng build mh-input-integer",
+    "build-mh-input-search": "ng build mh-input-search",
+    "build-mh-input-select": "ng build mh-input-select",
+    "build-mh-input-text": "ng build mh-input-text",
+    "build-mh-input-usd": "ng build mh-input-usd",
+    "build-mh-page-title": "ng build mh-page-title",
+    "build-mh-server-error": "ng build mh-server-error",
+    "build-mh-throbber": "ng build mh-throbber",
+    "build-material-cms-view": "ng build material-cms-view",
+    "build-material-cms-admin": "ng build material-cms-admin",
     "ngc-cms-a": "ng g component --project=material-cms-admin --",
     "ngc-cms-v": "ng g component --project=material-cms-view --",
     "ngc-dsl": "ng g component --project=DailySpendLimit --",
@@ -20,20 +38,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/cdk": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
+    "@angular/animations": "~7.1.0",
+    "@angular/cdk": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/pwa": "^0.10.4",
-    "@angular/router": "~7.0.0",
-    "@angular/service-worker": "~7.0.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
+    "@angular/material": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/pwa": "^0.11.0",
+    "@angular/router": "~7.1.0",
+    "@angular/service-worker": "~7.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
@@ -44,14 +62,15 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-ng-packagr": "~0.11.0",
+    "@angular/cli": "~7.1.0",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "ng-packagr": "^4.2.0",
+    "npm-run-all": "^4.1.5",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
