--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "repo",
   "version": "1.0.0",
   "scripts": {
-    "build-lib": "run-s -c clean-lib build-core build-gapi build-mh build-material-cms-view build-material-cms-admin",
+    "build-lib": "run-s -c clean-lib build-core build-gapi build-mh build-material-cms",
     "clean-lib": "rmdir /s/q dist",
     "build-core": "ng build core",
     "build-gapi": "ng build gapi",
@@ -20,8 +20,10 @@
     "build-mh-page-title": "ng build mh-page-title",
     "build-mh-server-error": "ng build mh-server-error",
     "build-mh-throbber": "ng build mh-throbber",
+    "build-material-cms": "run-s build-material-cms-*",
     "build-material-cms-view": "ng build material-cms-view",
     "build-material-cms-admin": "ng build material-cms-admin",
+    "build-material-cms-providers": "ng build material-cms-providers",
     "ngc-cms-a": "ng g component --project=material-cms-admin --",
     "ngc-cms-v": "ng g component --project=material-cms-view --",
     "ngc-dsl": "ng g component --project=DailySpendLimit --",
