--- a/angular.json
+++ b/angular.json
@@ -632,8 +632,8 @@
       }
     },
     "material-cms-view": {
-      "root": "projects/material-cms-view",
-      "sourceRoot": "projects/material-cms-view/src",
+      "root": "projects/material-cms/material-cms-view",
+      "sourceRoot": "projects/material-cms/material-cms-view/src",
       "projectType": "library",
       "prefix": "cms",
       "schematics": {
@@ -664,24 +664,24 @@
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/material-cms-view/tsconfig.lib.json",
-            "project": "projects/material-cms-view/ng-package.json"
+            "tsConfig": "projects/material-cms/material-cms-view/tsconfig.lib.json",
+            "project": "projects/material-cms/material-cms-view/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/material-cms-view/src/test.ts",
-            "tsConfig": "projects/material-cms-view/tsconfig.spec.json",
-            "karmaConfig": "projects/material-cms-view/karma.conf.js"
+            "main": "projects/material-cms/material-cms-view/src/test.ts",
+            "tsConfig": "projects/material-cms/material-cms-view/tsconfig.spec.json",
+            "karmaConfig": "projects/material-cms/material-cms-view/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/material-cms-view/tsconfig.lib.json",
-              "projects/material-cms-view/tsconfig.spec.json"
+              "projects/material-cms/material-cms-view/tsconfig.lib.json",
+              "projects/material-cms/material-cms-view/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -691,8 +691,8 @@
       }
     },
     "material-cms-admin": {
-      "root": "projects/material-cms-admin",
-      "sourceRoot": "projects/material-cms-admin/src",
+      "root": "projects/material-cms/material-cms-admin",
+      "sourceRoot": "projects/material-cms/material-cms-admin/src",
       "projectType": "library",
       "prefix": "cms",
       "schematics": {
@@ -723,24 +723,24 @@
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/material-cms-admin/tsconfig.lib.json",
-            "project": "projects/material-cms-admin/ng-package.json"
+            "tsConfig": "projects/material-cms/material-cms-admin/tsconfig.lib.json",
+            "project": "projects/material-cms/material-cms-admin/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/material-cms-admin/src/test.ts",
-            "tsConfig": "projects/material-cms-admin/tsconfig.spec.json",
-            "karmaConfig": "projects/material-cms-admin/karma.conf.js"
+            "main": "projects/material-cms/material-cms-admin/src/test.ts",
+            "tsConfig": "projects/material-cms/material-cms-admin/tsconfig.spec.json",
+            "karmaConfig": "projects/material-cms/material-cms-admin/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/material-cms-admin/tsconfig.lib.json",
-              "projects/material-cms-admin/tsconfig.spec.json"
+              "projects/material-cms/material-cms-admin/tsconfig.lib.json",
+              "projects/material-cms/material-cms-admin/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -1462,7 +1462,7 @@
           "spec": false
         }
       },
-     "architect": {
+      "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
@@ -1484,6 +1484,41 @@
             "tsConfig": [
               "projects/material-helpers/mh-input-file/tsconfig.lib.json",
               "projects/material-helpers/mh-input-file/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "material-cms-providers": {
+      "root": "projects/material-cms/material-cms-providers",
+      "sourceRoot": "projects/material-cms/material-cms-providers/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/material-cms/material-cms-providers/tsconfig.lib.json",
+            "project": "projects/material-cms/material-cms-providers/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/material-cms/material-cms-providers/src/test.ts",
+            "tsConfig": "projects/material-cms/material-cms-providers/tsconfig.spec.json",
+            "karmaConfig": "projects/material-cms/material-cms-providers/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/material-cms/material-cms-providers/tsconfig.lib.json",
+              "projects/material-cms/material-cms-providers/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
