--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
-    "@angular/flex-layout": "github:angular/flex-layout-builds",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "~7.1.0",
     "@angular/http": "~7.1.0",
     "@angular/material": "~7.1.0",
@@ -67,7 +67,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
     "@angular-devkit/build-ng-packagr": "~0.11.0",
-    "@angular/cli": "~7.1.2",
+    "@angular/cli": "~7.1.3",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/node": "~8.9.4",
