--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "serve-tk": "ng s TiffanysKitchen --aot=true --progress=false --base-href=/",
     "serve-vtw": "ng s VinesToWinesDM --aot=true --progress=false --base-href=/",
     "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
-    "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
+    "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
+    "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch-Prod/ --base-href=/",
     "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
     "build-tk-dev": "ng b TiffanysKitchen --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/",
     "build-vtw-dev": "ng b VinesToWinesDM --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/VinesToWinesDM/docs/ --base-href=/VinesToWinesDM/",
