--- a/package.json
+++ b/package.json
@@ -51,16 +51,14 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
-    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~8.0.0",
-    "@angular/http": "~7.2.0",
     "@angular/material": "~8.0.0",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/pwa": "^0.13.0",
+    "@angular/pwa": "^0.801.0",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
-    "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
     "material-icon-font": "^3.0.1",
@@ -70,19 +68,19 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.1",
-    "@angular-devkit/build-ng-packagr": "~0.800.1",
-    "@angular/cli": "~8.0.1",
+    "@angular-devkit/build-angular": "~0.800.6",
+    "@angular-devkit/build-ng-packagr": "~0.800.6",
+    "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.0",
     "ng-packagr": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
+    "tsickle": "^0.35.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "tslint": "~5.15.0",
     "typescript": "~3.4.5"
   }
 }
