--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "ngc-vtw": "ng g component --project=VinesToWinesDM --",
     "ngm-dsl": "ng g module --project=DailySpendLimit --",
     "ngm-vtw": "ng g module --project=VinesToWinesDM --",
-    "serve-dsl": "ng s DailySpendLimit --aot=true --progress=false --base-href=/",
-    "serve-sc": "ng s StavesChurch --aot=true --progress=false --base-href=/",
-    "serve-tk": "ng s TiffanysKitchen --aot=true --progress=false --base-href=/",
-    "serve-vtw": "ng s VinesToWinesDM --aot=true --progress=false --base-href=/",
+    "serve-dsl": "ng s DailySpendLimit",
+    "serve-sc": "ng s StavesChurch",
+    "serve-tk": "ng s TiffanysKitchen",
+    "serve-vtw": "ng s VinesToWinesDM",
     "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
     "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
@@ -47,26 +47,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
-    "@angular/cdk": "~8.0.0",
+    "@angular/cdk": "~8.0.2",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/flex-layout": "github:angular/flex-layout-builds",
     "@angular/forms": "~8.1.1",
-    "@angular/http": "~7.2.0",
-    "@angular/material": "~8.0.0",
+    "@angular/material": "~8.0.2",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/pwa": "^0.13.0",
+    "@angular/pwa": "^0.801.1",
     "@angular/router": "~8.1.1",
     "@angular/service-worker": "~8.1.1",
-    "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
     "material-icon-font": "^3.0.1",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.5.2",
+    "rxjs": "~6.4.0",
     "typeface-great-vibes": "0.0.72",
+    "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -76,13 +75,12 @@
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "ng-packagr": "^5.3.0",
+    "codelyzer": "^5.0.0",
+    "ng-packagr": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "tsickle": "^0.35.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
