--- a/projects/DailySpendLimit/tsconfig.json
+++ b/projects/DailySpendLimit/tsconfig.json
@@ -120,8 +120,11 @@
     "outDir": "../../out-tsc/app",
     "types": []
   },
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+    "src/test.ts",
+    "src/**/*.spec.ts"
   ]
 }
