--- a/projects/TiffanysKitchen/ngsw-config.json
+++ b/projects/TiffanysKitchen/ngsw-config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
   "assetGroups": [
     {
@@ -12,18 +13,14 @@
           "/*.js"
         ]
       }
-    },
-    {
+    }, {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/*.woff",
-          "/*.woff2",
-          "/*.ttf",
-          "/*.eot",
-          "/assets/**"
+          "/assets/**",
+          "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
     }
